// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User list AccessError component should load access error component 1`] = `
<Fragment>
  <Memo()
    config={Object {}}
    coreStart={
      Object {
        "http": Object {
          "basePath": Object {
            "serverBasePath": "",
          },
        },
      }
    }
    dataSourcePickerReadOnly={false}
    depsStart={
      Object {
        "dataSource": Object {
          "dataSourceEnabled": true,
        },
      }
    }
    params={Object {}}
    selectedDataSource={
      Object {
        "id": "test",
      }
    }
    setDataSource={[MockFunction]}
  />
  <EuiPageHeader>
    <EuiTitle
      size="l"
    >
      <h1>
        Internal users
      </h1>
    </EuiTitle>
  </EuiPageHeader>
  <AccessErrorComponent
    loading={false}
  />
</Fragment>
`;

exports[`User list Render unable to access dataSource when enabled and inaccessible 1`] = `
<Memo()
  config={Object {}}
  coreStart={
    Object {
      "http": Object {
        "basePath": Object {
          "serverBasePath": "",
        },
      },
    }
  }
  depsStart={
    Object {
      "dataSource": Object {
        "dataSourceEnabled": true,
      },
    }
  }
  navigation={Object {}}
  params={Object {}}
/>
`;
